--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
                     <div class="nav-container"> 
 
-                            <div class="logo">
+                        <div class="logo">
                             <img src="./assetsnav/logoGrandeSinFondo.png" class="logo-img" alt="logo">
                         </div>
                     
                         <label for="menu" class="nav-lavel">
                             <img src="./assetsnav/bx-menu.svg" class="nav-img" alt="hamburguesa">
                         </label>
-                        <input type="checkbox" id="menu" class="nav-imput">
+                        <input type="checkbox" id="menu" class="nav-input">
                 
                         <nav id="nav-bar">
                             <ul>
@@ -71,7 +71,7 @@
                               <div class="carousel-item">
                                 <img src="./assetsnav/piesInvierno.jpg" class="d-block w-100" alt="bebe invierno">
                                 <div class="carousel-caption d-none d-md-block">
-                                  <h5>Litle Love</h5>
+                                  <h5>Little Love</h5>
                                   <p>Los piés más pequeños, hacen la huellas más grandes en nuestros corazones.</p>
                                 </div>
                               </div>
