section clientes reset css

--- a/section/client.html
+++ b/section/client.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../SASS/main.css">
     <link rel="shortcut icon" href="./assetsnav/famiconsin fondo.png" type="image/x-icon">
     <link rel="shortcut icon" href="../assetsnav/famiconsin fondo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +29,7 @@
                         <label for="menu" class="nav-lavel">
                             <img src="../assetsnav/bx-menu.svg" class="nav-img" alt="hamburguesa">
                         </label>
-                        <input type="checkbox" id="menu" class="nav-imput">
+                        <input type="checkbox" id="menu" class="nav-input">
                 
                         <nav id="nav-bar">
                             <ul>
@@ -113,11 +113,11 @@
                         <div class="footer-social">
                             <a href="#">
                 
-                                <img src="../assetsnav/facebook.svg" alt="facebook" class="footer-icon">
+                                <img src="../assetsnav/facebook.svg" alt="facebook" class="footer-icon footer-icon footer__icon--facebook">
                             </a>
                             <a href="#">
    
-                                <img src="../assetsnav/instagram.svg" alt="instagram" class="footer-icon">
+                                <img src="../assetsnav/instagram.svg" alt="instagram" class="footer-icon footer-icon footer__icon--instagram">
                             </a>
                         </div>
                     </div>
