--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </section>
                 </div>
 
-                <div class="cart-container">
+                <div class="card-container">
                         <section id="card">
                             <h2 class="titule">Romi Davicino</h2>
                             <img src="./assetsnav/romi3.jpg" class="card-imgs" alt="Foto Romi">
